SOLR-15528: guava collections replaced with JDK equiv